--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,106 @@
 @import url('https://fonts.googleapis.com/css?family=Unica+One|Vollkorn');
 @import 'styles/variables';
 @import 'styles/mixins';
-@import 'styles/library';
-@import 'styles/book';
-@import 'styles/book-toolbar';
 @import 'styles/book-list';
 @import 'styles/book-detail';
 @import 'styles/navbar';
 @import 'styles/add-book';
-@import 'styles/search-form';
-@import 'styles/results';
+
+html, body {
+  background-color: $white;
+}
 
 .App {
-  background-color: $white;
-  font-family: $main-font;
-  margin: 0 2rem;
+  font: .95em $main-font;
+  margin: .5rem;
+
+  @include atExtraSmall {
+    margin: 1rem;
+  }
 
   h1 {
     font-family: $title-font;
+    font-weight: 400;
     letter-spacing: .1em;
     text-transform: uppercase;
-    margin-top: 0px;
+    margin: 0;
   }
 
+  a{
+      color: $red;
+      text-decoration: none;
+
+      &:hover {
+        color: $black;
+      }
+    }
+
+/* Buttons */
+  .btn-black, .btn-white {
+    font-family: $title-font;
+    border: none;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+
+     &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .btn-black {
+    background-color: $black;
+    border-radius: 3px;
+    color: $white;
+
+    &:hover {
+      background-color: $red;
+    }
+  }
+
+  .btn-white {
+    background-color: $white;
+  }
+
+/* Library Component */
+  .library{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .no-book {
+    font-size: 1.1em;
+    margin-bottom: 4rem;
+
+    @include atSmall {
+      margin-bottom: 5rem;
+    }
+  }
+
+  .book {
+    .title {
+      font-family: $title-font;
+      text-transform: uppercase;
+    }
+}
+
+/* Login Component */
+  .login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.1em;
+    margin-top: 5rem;
+    text-align: center;
+
+    .sign-in-btn {
+      margin: 1rem;
+      padding: .62rem 1rem;
+      width: 170px;
+    }
+}
+
+/* Scroll to Top Component */
   .scroll-to-top {
     background-color: $red;
     border-radius: 3px;
@@ -36,6 +114,7 @@
     }
   }
 
+/* Loading Component */
   .loading {
     font-family: $title-font;
     font-size: 3em;
