--- a/src/styles/_book-detail.scss
+++ b/src/styles/_book-detail.scss
@@ -19,52 +19,93 @@
     flex-direction: row;
     }
 
-      img {
-        height: 450px;
-        width: 300px;
-        margin: 0 auto;
-        padding-bottom: 1rem;
+    img {
+      height: 450px;
+      width: 300px;
+      margin: 0 auto;
+      padding-bottom: 1rem;
 
-        @include atMedium {
-          height: 400px;
-          width: auto;
-          margin: auto;
-          padding-bottom: 0;
-        }
+      @include atMedium {
+        height: 400px;
+        width: auto;
+        margin: auto;
+        padding-bottom: 0;
       }
+    }
 
     &-info {
       margin-left: 10px;
 
       .title {
-        font-size: 1.4em;
+        font-size: 1.3em;
         letter-spacing: .1em;
         font-weight: 700;
         margin-top: 1rem;
       }
 
-      .author, .published {
-        font-size: 1.1em;
-      }
-
-      a {
-        color: $red;
-        text-decoration: none;
-
-        &:hover {
-          color: $black;
-        }
-      }
-
       .show-more-btn {
+        font-family: $main-font;
         background-color: $white;
         border: none;
         color: $red;
 
         &:hover {
           color: $black;
+          cursor: pointer;
         }
       }
+    }
+  }
+}
+
+.book-toolbar {
+  font-family: $title-font;
+  position: relative;
+
+  &-main {
+    border-top: 4px double $black;
+    border-bottom: 4px double $black;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &-options {
+    background-color: $white;
+    border: 1px solid #d3d3d3;
+    display: flex;
+    flex-direction: column;
+    padding-right: 1rem;
+    position: absolute;
+  }
+
+  .header-btn, .option-btn {
+    padding: .5rem;
+
+    &:hover {
+      color: $red;
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+    span {
+      font-size: .7em;
+      margin-left: 10px;
+      position: relative;
+      top: -2px;
+    } 
+  }
+
+  .option-btn {
+    text-align: left;
+  }
+
+  .delete-btn {
+    color: $red;
+      
+    &:hover {
+      color: $black;
     }
   }
 }
