--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,12 +1,13 @@
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin: 0 0 .5rem;
   padding: 0;
   
   @include atSmall {
     justify-content: flex-end;
+    margin-top: -36px;
   }
 
   li {
